implemented fetch and added key-wrapper

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <div class="side-bar-wrapper">
+      <div class="key-wrapper text">Name : Weight</div>
       <div class="names-wrapper">
         <div class="name-wrapper">
           <div class="text name" id="name1">hello</div>
@@ -63,10 +64,10 @@
         <div class="name-wrapper">
           <div class="text name" id="name5"></div>
           <div class="buttons-wrapper">
-            <div onclick="changeWeight(4, '-')" class="button">
+            <div onclick="changeWeight(5, '-')" class="button">
               <i class="fa-solid fa-minus"></i>
             </div>
-            <div onclick="changeWeight(0, '+')" class="button">
+            <div onclick="changeWeight(5, '+')" class="button">
               <i class="fa-solid fa-plus"></i>
             </div>
           </div>
